# pharmacy_backend

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  lib.rs
DB/: schema.sql  tables_functions.sql  views.sql
collections/: root.http
graphify-out/: .graphify_python  .graphify_root  graph.html
schemas/: Cargo.toml
schemas/src/: audit_log.rs  cash_entries.rs  cash_journals.rs  categories.rs  client.rs  client_orden.rs  commission_parameters.rs  config_parameters.rs  customer_credit_accounts.rs  customers.rs  discounts.rs  inventory_locations.rs  inventory_movements.rs  lib.rs  payment_methods.rs  permissions.rs  prelude.rs  product.rs  product_barcodes.rs  product_lots.rs  product_prices.rs  products.rs  purchase_items.rs  purchase_payments.rs  purchases.rs  role_permissions.rs  roles.rs  sale.rs  sale_items.rs  sale_payment_allocations.rs  sale_payments.rs  saledetal.rs  sales.rs  suppliers.rs  t_accounts_payable.rs  tax_profiles.rs  tax_rates.rs  units.rs  user.rs  user_roles.rs  (+12 more)
src/: lib.rs  main.rs
src/api_handlers/: mod.rs
src/api_handlers/client/: client_dto.rs  client_handler.rs  mod.rs
src/api_handlers/client_orden/: client_orden_dto.rs  client_orden_handler.rs  mod.rs
src/api_handlers/inventory/: inventory_dto.rs  inventory_handler.rs  mod.rs
src/api_handlers/login/: login_dto.rs  login_handler.rs  mod.rs
src/api_handlers/report/: mod.rs  report_dto.rs  report_handler.rs
src/api_handlers/sales/: mod.rs  sales_dto.rs  sales_handler.rs
src/api_handlers/user/: user_dto.rs  user_handler.rs
src/api_module/: mod.rs
src/api_module/add_product/: mod.rs
src/api_module/add_sale/: mod.rs
src/api_module/audit_log/: mod.rs
src/api_module/cash_entries/: mod.rs
src/api_module/cash_journals/: mod.rs
src/api_module/categories/: mod.rs
src/api_module/customer_credit_accounts/: mod.rs
src/api_module/customers/: mod.rs
src/api_module/discounts/: mod.rs
src/api_module/inventory_locations/: mod.rs
src/api_module/inventory_movements/: mod.rs
src/api_module/payment_methods/: mod.rs
src/api_module/permissions/: mod.rs
src/api_module/product_barcodes/: mod.rs
src/api_module/product_lots/: mod.rs
src/api_module/product_prices/: mod.rs
src/api_module/products/: mod.rs
src/api_module/purchase_items/: mod.rs
src/api_module/purchase_payments/: mod.rs
src/api_module/purchases/: mod.rs
src/api_module/role/: mod.rs
src/api_module/role_permissions/: mod.rs
src/api_module/sale_items/: mod.rs
src/api_module/sale_payment_allocations/: mod.rs
src/api_module/sale_payments/: mod.rs
src/api_module/sales/: mod.rs
src/api_module/suppliers/: mod.rs
src/api_module/tax_profiles/: mod.rs
src/api_module/units/: mod.rs
src/api_module/user/: mod.rs
src/api_utils/: api_const.rs  api_error.rs  api_response.rs  api_utils_fun.rs  extractors.rs  mod.rs
src/config/: mod.rs
src/controller/: api_controller.rs  mod.rs  utils_router.rs
src/router_api/: api_controller.rs
tests/: jwt_test.rs  pagination_test.rs
tools/: generate_root_http.py
(+187 files in other folders)
