[package]
name = "pharmacy_backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["schemas"]


[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = { version = "0.15.7"}
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono"]}
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "10.2.0"
log = "0.4"
api-rate-limiter = "0.1.2"
env_logger = "0.11.9"
chrono = { version = "0.4", features = ["serde"] }


schemas = { path = "./schemas" }
