[package]
name = "pharmacy_backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["schemas"]


[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = { version = "0.15.7"}
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres", "with-chrono"]}
validator = { version = "0.20.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11.9"
api-rate-limiter = "0.1.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = { version = "0.9.5", features = ["std"] }
regex = "1.7.1"
lazy_static = "1.4.0"
uuid = { version = "1.4.2", features = ["v4"] }

# Local workspace crate
schemas = { path = "schemas" }


# CORS support for Axum
tower-http = { version = "0.3", features = ["cors"] }
flexi_logger = "0.31.8"
